:sparkles: Massive update

--- a/source/download/Linux.html.erb
+++ b/source/download/Linux.html.erb
@@ -19,22 +19,52 @@
 </style>
 
 
-<div class="row content-div">
+<div class="grid-container content-div">
   <div style="padding:3em; text-align: center;">
-    <h2>Latest release: V0.4.8.0 for Debian, Ubuntu and Mint</h2>
-    <hr>
-    <p>
-      For Linux, we have created build scripts to simplify the installation on Linux. <br>
-      Read the <a href="https://github.com/RigsOfRods/ror-linux-buildscripts/blob/master/README.md">README.md</a> for
-      detailed instructions.
-      <br>
-      <br>
-      <a href="https://github.com/RigsOfRods/ror-linux-buildscripts/archive/master.zip" class="show-for-medium large button"><span class="fa fa-download"/>
-        Download</a>
-      <a href="https://github.com/RigsOfRods/ror-linux-buildscripts/archive/master.zip" class="show-for-small-only expanded button"><span class="fa fa-download"/>
-        Download</a>
-      <br>
-    </p>
+    <h2>Latest release: V0.4.8.0 for Linux</h2>
+
+    <table style="margin-top: 2em">
+      <thead>
+        <tr>
+          <th class="center ror-color">
+            <h2>Step 1</h2>
+          </th>
+          <th class="center ror-color">
+            <h2>Step 2</h2>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="center">
+            Download an install the
+            <span data-tooltip="data-tooltip" aria-haspopup="true" class="has-tip" data-disable-hover='false' tabindex="1" title="itch.io is a simple way to find and share indie games online for free.">
+              itch.io desktop app
+            </span>
+            <br>
+            <br>
+            <a href="https://itch.io/app" class="show-for-medium large button">
+              Download the itch.io desktop app
+            </a>
+            <a href="https://itch.io/app" class="show-for-small-only expanded button">
+              Download the itch.io desktop app
+            </a>
+          </td>
+          <td class="center">
+            Click the button below to install RoR using the itch.io desktop app
+            <br>
+            <br>
+            <a href="itchio://install/351397" class="show-for-medium large button">
+              Install RoR
+            </a>
+            <a href="itchio://install/351397" class="show-for-small-only expanded button">
+              Install RoR
+            </a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
     <small>Not the correct version or wrong OS?
       <a href="//<%= config[:download_host] %>/index.html#NoRedirect">See all versions</a></small>
   </div>
