--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,12 +1,12 @@
 <div class="start">
-  <div class="row">
+  <div class="grid-container">
     <section class="section-dl">
-      <div class="row">
-        <div class="large-12 columns">
-          <div class="row">
-            <div class="large-5 columns startbanner">
-              <img src="/images/logos/rorlogo.png">
-              <h3 class="slogan">Soft Body Physics Simulator</h3>
+      <div class="grid-x">
+        <div class="large-12 cell">
+          <div class="grid-x">
+            <div class="large-5 cell startbanner">
+              <img src="/images/branding/RoR_Logo.png">
+
             </div>
           </div>
           <div class="download-wrapper">
@@ -20,39 +20,37 @@
     </section>
   </div>
 </div>
-<div class="row">
-  <div class="row">
-    <h3 class="columns">Rigs of Rods is an open source vehicle simulator based on soft-body physics</h3>
+
+<div class="grid-container">
+  <div class="grid-x">
+    <h3 class="cell">Rigs of Rods is an open source vehicle simulator based on soft-body physics</h3>
   </div>
-  <div class="large-9 columns">
-    <p>Rigs of Rods is an
-      <b>open source</b>
-      vehicle simulator licensed under the GNU General Public License version 3.
-      <br>
-      What makes Rigs of Rods different to most simulators is its unique soft-body physics: vehicles, machines, objects,
-      etc. are simulated in real-time as flexible soft-body objects, giving the simulation an extremely accurate
-      behavior which entirely
-      depends on the physical construction of the vehicles or objects you create.
-    </p>
-  </div>
-  <div class="iconbox large-3 columns show-for-medium">
-    <div style="text-align: center;" class="section-icon">
-      <div class="fa fa-truck"></div>
+  <div class="grid-x">
+    <div class="large-9 cell">
+      <p>Rigs of Rods is an
+        <b>open source</b>
+        vehicle simulator licensed under the GNU General Public License version 3.
+        <br>
+        What makes Rigs of Rods different to most simulators is its unique soft-body physics: vehicles, machines, objects, etc. are simulated in real-time as flexible soft-body objects, giving the simulation an extremely accurate behavior which entirely
+        depends on the physical construction of the vehicles or objects you create.
+      </p>
+    </div>
+    <div class="iconbox large-3 cell show-for-medium">
+      <div class="section-icon center">
+        <div class="fa fa-truck"></div>
+      </div>
     </div>
   </div>
   <hr/>
-  <div class="row">
-    <h3 class="columns">Features</h3>
-    <div class="large-12 columns">
+  <div class="grid-x">
+    <h3 class="cell">Features</h3>
+    <div class="large-12 cell">
       <ul>
-        <li>Soft-body physics. Objects according to their weight distribution, construction, and/or suspension (in the
-          case of vehicles).
+        <li>Soft-body physics. Objects according to their weight distribution, construction, and/or suspension (in the case of vehicles).
         </li>
-        <li>Advanced flight model based on blade element theory. It allows the accurate simulation of any airplane,
-          based entirely on its physical dimensions and wing airfoils, similar to X-Plane.
+        <li>Advanced flight model based on blade element theory. It allows the accurate simulation of any airplane, based entirely on its physical dimensions and wing airfoils, similar to X-Plane.
         </li>
-        <li>Accurate buoyancy model based on elemental pressure gradients, enabling boats with complex hulls to move
-          realistically in the swell.
+        <li>Accurate buoyancy model based on elemental pressure gradients, enabling boats with complex hulls to move realistically in the swell.
         </li>
         <li>Basic support for dual-core processing. More multithreading and CUDA support is planned.
         </li>
@@ -64,21 +62,21 @@
     </div>
   </div>
   <hr/>
-  <div class="columns row">
+  <div class="cell">
     <h3>See for yourself</h3>
-    <div class="orbit" role="region" aria-label="Rigs of Rods Screenshots" data-orbit>
+    <div class="orbit" role="region" aria-label="Rigs of Rods Screenshots" data-orbit="data-orbit">
       <ul class="orbit-container">
         <button class="orbit-previous">
-					<span class="show-for-sr">Previous Slide
-					</span>&#9664;&#xFE0E;
+          <span class="show-for-sr">Previous Slide
+          </span>&#9664;&#xFE0E;
         </button>
         <button class="orbit-next">
-					<span class="show-for-sr">Next Slide
-					</span>&#9654;&#xFE0E;
+          <span class="show-for-sr">Next Slide
+          </span>&#9654;&#xFE0E;
         </button>
         <li class="is-active orbit-slide">
           <div class="flex-video widescreen">
-            <iframe frameborder="0" src="https://www.youtube-nocookie.com/embed/bRbQ4OaljWs" allowfullscreen></iframe>
+            <iframe frameborder="0" src="https://www.youtube-nocookie.com/embed/bRbQ4OaljWs" allowfullscreen="allowfullscreen"></iframe>
           </div>
         </li>
         <li class="orbit-slide">
@@ -116,11 +114,10 @@
     </div>
   </div>
   <hr/>
-  <div class="row">
-    <h3 class="columns">100% free and open source</h3>
-    <div class="large-9 columns">
-      <p>Rigs of Rods has been developed since 2005 by hundreds of volunteers around the world. It is open source and
-        available under the
+  <div class="grid-x">
+    <h3 class="cell">100% free and open source</h3>
+    <div class="large-9 cell">
+      <p>Rigs of Rods has been developed since 2005 by hundreds of volunteers around the world. It is open source and available under the
         <a href='https://www.gnu.org/copyleft/' title='Copyleft licensing'>copyleft</a>-style
         <a href='http://www.gnu.org/licenses/gpl-3.0.html' title='The GPLv3 license'>GPLv3</a>
         license.
@@ -128,19 +125,18 @@
       <p>
         <b>The game is and will always be free software.</b>
       </p>
-      <p>Moreover, as volunteer-developed software, our community welcomes all kinds of contributions. In case you would
-        like to give a hand, you can find the source code
+      <p>Moreover, as volunteer-developed software, our community welcomes all kinds of contributions. In case you would like to give a hand, you can find the source code
         <a href='https://github.com/rigsofrods/rigs-of-rods'>at GitHub</a>.
       </p>
     </div>
-    <div class="large-3 columns">
+    <div class="large-3 cell">
       <script type='text/javascript' src='https://www.openhub.net/p/rigs-of-rods/widgets/project_factoids_stats?format=js'></script>
     </div>
   </div>
   <hr/>
-  <div class="row">
-    <h3 class="columns">Minimum System Requirements</h3>
-    <div class="large-12 columns">
+  <div class="grid-x">
+    <h3 class="cell">Minimum System Requirements</h3>
+    <div class="large-12 cell">
       <ul>
         <li>
           OS: Windows 7 or higher or Linux
@@ -152,9 +148,7 @@
           RAM: 2048 MB
         </li>
         <li>
-          Video Card:
-          Windows: Dedicated video card capable of running DirectX9+
-          Linux: Dedicated video card capable of running OpenGL 3
+          Video Card: Windows: Dedicated video card capable of running DirectX9+ Linux: Dedicated video card capable of running OpenGL 3
         </li>
       </ul>
     </div>
