--- a/source/layouts/_footer.erb
+++ b/source/layouts/_footer.erb
@@ -1,13 +1,13 @@
 <footer>
-  <div class="row">
-    <div class="small-12 medium-4 columns">
+  <div class=" grid-container grid-x">
+    <div class="small-12 medium-4 cell">
       <h4>We are open</h4>Rigs of Rods is free and open source, available under the
       <a href="https://www.gnu.org/Copyleft/" title="Copyleft licensing">copyleft</a>-style
       <a href="http://www.gnu.org/licenses/gpl-3.0.html" title="The GPLv3 license">GPLv3</a> license.
       <br> <br>
       <script type='text/javascript' src='https://www.openhub.net/p/rigs-of-rods/widgets/project_thin_badge?format=js'></script>
     </div>
-    <div class="small-12 medium-2 columns">
+    <div class="small-12 medium-2 cell">
       <h4>Home</h4>
       <ul>
         <li>
@@ -18,7 +18,7 @@
         </li>
       </ul>
     </div>
-    <div class="small-12 medium-2 columns">
+    <div class="small-12 medium-2 cell">
       <h4>Forum</h4>
       <ul>
         <li>
@@ -32,7 +32,7 @@
         </li>
       </ul>
     </div>
-    <div class="small-12 medium-4 columns">
+    <div class="small-12 medium-4 cell">
       <h4>Follow us</h4>
       <ul class="home-social">
         <li>
@@ -50,21 +50,19 @@
 </script>
 
 <% if build? %>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-101992995-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
+<!-- Matomo -->
+<script type="text/javascript">
+var _paq = window._paq || [];
+/* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+_paq.push(['trackPageView']);
+_paq.push(['enableLinkTracking']);
+(function() {
+var u="//matomo.anotherfoxguy.com/";
+_paq.push(['setTrackerUrl', u+'matomo.php']);
+_paq.push(['setSiteId', '4']);
+var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+})();
+</script>
+<!-- End Matomo Code -->
 <% end %>
