--- a/source/layouts/_head.erb
+++ b/source/layouts/_head.erb
@@ -7,13 +7,9 @@
 </title>
 <meta name="description" content="Rigs of Rods is an open source vehicle simulator licensed under the GNU General Public License version 3.">
 <meta name="robots" content="index, follow">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.2.3/motion-ui.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CUbuntu+Mono:400%7CUbuntu:300,300italic,300bold,400,400italic,400bold,600,600italic,600bold" rel="stylesheet">
 
-<link href="/stylesheets/ror.css" rel="stylesheet">
+<script src="//<%= config[:host] %>/dist/app.js"></script>
+<link href="//<%= config[:host] %>/stylesheets/ror.css" rel="stylesheet">
 
 <script type="application/ld+json">
 {
