--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -3,29 +3,28 @@
   <div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
     <button class="menu-icon" type="button" data-toggle></button>
     <div class="title-bar-title">Menu</div>
+  </div>
 
-    <div class="row" id="main-menu">
+    <div class="grid-x hide-for-medium" id="main-menu">
 
       <% data.menulinks.each do |entry| %>
-          <div class="large-3 columns">
+          <div class="large-3 cell">
             <a class="main-menu-mobile-text" href="<%= entry.url %>">
-          <span class="<%= entry.icon %>">
-          </span>
-              <span class="nav-entry-text"><%= entry.name %>
-          </span>
+              <span class="<%= entry.icon %>">
+              </span>
+                  <span class="nav-entry-text"><%= entry.name %>
+              </span>
             </a>
           </div>
       <% end %>
 
     </div>
 
-  </div>
-
 
   <div class="top-bar show-for-medium" data-sticky data-options="marginTop:0;" style="height: 3.5em; width: 100%;">
     <div class="top-bar-left show-for-large">
       <ul class="menu">
-        <img src="//<%= config[:host] %>/images/logos/rorlogo.png" style="height: 2.5em;">
+        <img src="//<%= config[:host] %>/images/branding/RoR_Logo.png" style="height: 2.5em;">
       </ul>
     </div>
     <div class="top-bar-right">
