--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,16 +1,16 @@
-<div class="start">
+<div class="start" style="background: url(//<%= config[:CDN] %>/images/screenshots/ror-screenshot1.jpg) !important">
   <div class="grid-container">
     <section class="section-dl">
       <div class="grid-x">
         <div class="large-12 cell">
           <div class="grid-x">
             <div class="large-5 cell startbanner">
-              <img src="/images/branding/RoR_Logo.png">
+              <img src="//<%= config[:CDN] %>/images/branding/RoR_Logo.png">
 
             </div>
           </div>
           <div class="download-wrapper">
-            <a class="button download" href="//<%= config[:download_host] %>/">
+            <a class="button download" href="//<%= config[:host] %>/download">
               <span class="fa fa-download"></span>
               Download
               <br></a>
@@ -80,25 +80,25 @@
           </div>
         </li>
         <li class="orbit-slide">
-          <img class="orbit-image" src="images/screenshots/ror-screenshot2.jpg" alt="Rigs of Rods Screenshot">
+          <img class="orbit-image" src="//<%= config[:CDN] %>/images/screenshots/ror-screenshot2.jpg" alt="Rigs of Rods Screenshot">
         </li>
         <li class="orbit-slide">
-          <img class="orbit-image" src="images/screenshots/ror-screenshot3.jpg" alt="Rigs of Rods Screenshot">
+          <img class="orbit-image" src="//<%= config[:CDN] %>/images/screenshots/ror-screenshot3.jpg" alt="Rigs of Rods Screenshot">
         </li>
         <li class="orbit-slide">
-          <img class="orbit-image" src="images/screenshots/ror-screenshot4.jpg" alt="Rigs of Rods Screenshot">
+          <img class="orbit-image" src="//<%= config[:CDN] %>/images/screenshots/ror-screenshot4.jpg" alt="Rigs of Rods Screenshot">
         </li>
         <li class="orbit-slide">
-          <img class="orbit-image" src="images/screenshots/ror-screenshot5.jpg" alt="Rigs of Rods Screenshot">
+          <img class="orbit-image" src="//<%= config[:CDN] %>/images/screenshots/ror-screenshot5.jpg" alt="Rigs of Rods Screenshot">
         </li>
         <li class="orbit-slide">
-          <img class="orbit-image" src="images/screenshots/ror-screenshot6.jpg" alt="Rigs of Rods Screenshot">
+          <img class="orbit-image" src="//<%= config[:CDN] %>/images/screenshots/ror-screenshot6.jpg" alt="Rigs of Rods Screenshot">
         </li>
         <li class="orbit-slide">
-          <img class="orbit-image" src="images/screenshots/ror-screenshot7.jpg" alt="Rigs of Rods Screenshot">
+          <img class="orbit-image" src="//<%= config[:CDN] %>/images/screenshots/ror-screenshot7.jpg" alt="Rigs of Rods Screenshot">
         </li>
         <li class="orbit-slide">
-          <img class="orbit-image" src="images/screenshots/ror-screenshot8.jpg" alt="Rigs of Rods Screenshot">
+          <img class="orbit-image" src="//<%= config[:CDN] %>/images/screenshots/ror-screenshot8.jpg" alt="Rigs of Rods Screenshot">
         </li>
       </ul>
       <nav class="orbit-bullets">
