--- a/source/layouts/_footer.erb
+++ b/source/layouts/_footer.erb
@@ -36,10 +36,10 @@
       <h4>Follow us</h4>
       <ul class="home-social">
         <li>
-          <a class="fa fa-steam-square" href="http://steamcommunity.com/groups/rigs-of-rods"></a>
-          <!--<a class="fa fa-facebook" href="https://facebook.com/rigsofrods"></a>
-          <a class="fa fa-twitter" href="https://twitter.com/rigsofrods"></a> -->
-          <a class="fa fa-github" href="https://github.com/RigsOfRods/rigs-of-rods"></a>
+          <a href="http://steamcommunity.com/groups/rigs-of-rods"><i class="fab fa-steam"></i></a>
+          <a href="https://facebook.com/rigsofrods"><i class="fab fa-facebook"></i></a>
+          <a href="https://twitter.com/rigsofrods"><i class="fab fa-twitter"></i></a>
+          <a href="https://github.com/RigsOfRods/rigs-of-rods"><i class="fab fa-github"></i></a>
         </li>
       </ul>
     </div>
