--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -1,6 +1,6 @@
 <div data-sticky-container>
 
-  <div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
+  <div class="title-bar hide-for-medium" data-responsive-toggle="main-menu">
     <button class="menu-icon" type="button" data-toggle></button>
     <div class="title-bar-title">Menu</div>
   </div>
